<resources>
    <string name="app_name">Resume App</string>
    <string name="title_activity_bottom_nav">BottomNav</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="tagline">Create professional resume in minutes..</string>
    <string name="input_error_name">Name cannot be blank.</string>
    <string name="input_error_password">Password cannot be blank.</string>
    <string name="input_error_password_length">The password cannot be less than 6 characters</string>
    <string name="input_error_password_match">Passwords do not match!</string>
    <string name="input_error_email">Email cannot be left blank</string>
    <string name="input_error_forget_pass_email_empty">Enter your email first</string>
    <string name="input_error_date">Date cannot be empty</string>


    <string name="content_description_open_drawer">Open Drawer</string>
    <string name="content_description_close_drawer">Closed Drawer</string>

    <string name="steps">Steps</string>

    <string name="navigation_personal_info">Personal Info</string>
    <string name="navigation_essentials">Essentials</string>
    <string name="navigation_projects">Projects</string>
    <string name="navigation_education">Schools</string>
    <string name="navigation_experience">Experience</string>
    <string name="navigation_awards">Awards</string>
    <string name="navigation_preview">Preview</string>

    <string name="action_add">Add</string>
    <string name="action_save">Save</string>
    <string name="action_print">Print</string>

    <string name="hint_project_name">Project Name</string>
    <string name="hint_detail">Detail</string>
    <string name="hint_subtitle">Subtitle</string>
    <string name="hint_description">Description</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_location">Location</string>
    <string name="hint_job_title">Job Title</string>
    <string name="hint_name">Name</string>
    <string name="hint_address_line1">Address line1</string>
    <string name="hint_address_line2">Address line2</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_email">Email</string>
    <string name="hint_school_name">School Name</string>
    <string name="hint_degree">Degree</string>
    <string name="hint_skills">Skills</string>
    <string name="hint_languages">Languages</string>

    <string name="message_empty_list">This is empty list</string>

    <string name="symbol_separator" translatable="false">ㅡ</string>
    <string name="education">Education</string>
    <string name="interstitial_ad_unit_test_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="ad_id">ca-app-pub-5204052011283006/3996837875</string>
    <string name="test_id">ca-app-pub-3940256099942544/1033173712</string>
</resources>
