<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_margin_bottom">

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_company_name"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_margin_bottom">

            <EditText
                android:id="@+id/input_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_location"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_margin_bottom">

            <EditText
                android:id="@+id/input_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_job_title"
                android:inputType="textCapWords" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_input_margin_bottom">

            <EditText
                android:id="@+id/input_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_description"
                android:inputType="text|textCapSentences|textMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</ScrollView>
